Fixes verticle align

--- a/modules/GUI/components/editarea/editarea.css
+++ b/modules/GUI/components/editarea/editarea.css
@@ -6,7 +6,7 @@
   width: 100%;
   padding: 0 10px 10px 10px;
   display: inline-block;
-  vertical-align: top;
+  vertical-align: middle;
   outline: none;
   resize: none;
 
