--- a/modules/GUI/components/form-table/form-table__cell-fake.css
+++ b/modules/GUI/components/form-table/form-table__cell-fake.css
@@ -1,6 +1,6 @@
 .form-table__cell-fake {
   display: inline-block;
-  vertical-align: top;
+  vertical-align: middle;
   font-size: 16px;
   padding: 5px 10px;
 
