--- a/modules/GUI/components/form/form__area.css
+++ b/modules/GUI/components/form/form__area.css
@@ -7,7 +7,7 @@
   width: 100%;
   padding: 10px;
   display: inline-block;
-  vertical-align: top;
+  vertical-align: middle;
   outline: none;
   resize: none;
   height: 160px;
