--- a/modules/GUI/components/form/form__between-inp.css
+++ b/modules/GUI/components/form/form__between-inp.css
@@ -1,6 +1,6 @@
 .form__between-inp {
   display: inline-block;
-  vertical-align: top;
+  vertical-align: middle;
   height: 38px;
   line-height: 38px;
   margin: 0 3px;
