--- a/modules/GUI/components/form/form__btn.css
+++ b/modules/GUI/components/form/form__btn.css
@@ -7,7 +7,7 @@
   line-height: 18px;
   padding: 9px 20px;
   display: inline-block;
-  vertical-align: top;
+  vertical-align: middle;
   border-radius: 2px;
   outline: none;
   text-decoration: none;
