--- a/modules/GUI/components/form/form__hint.css
+++ b/modules/GUI/components/form/form__hint.css
@@ -1,6 +1,6 @@
 .form__hint {
   display: inline-block;
-  vertical-align: top;
+  vertical-align: middle;
   font-size: 12px;
   color: #656565;
   line-height: 18px;
