--- a/modules/GUI/components/form/form__inp.css
+++ b/modules/GUI/components/form/form__inp.css
@@ -8,7 +8,7 @@
   height: 38px;
   padding: 0 10px;
   display: inline-block;
-  vertical-align: top;
+  vertical-align: middle;
   outline: none;
 
   &:focus,
