--- a/modules/GUI/components/form/form__select.css
+++ b/modules/GUI/components/form/form__select.css
@@ -4,7 +4,7 @@
   font-size: 16px;
   line-height: 18px;
   display: inline-block;
-  vertical-align: top;
+  vertical-align: middle;
   box-sizing: border-box;
   height: 38px;
   position: relative;
